MyFirstProject/src/objects/Contact.object
<CustomObject>
    <fields>
        <fullName>Contact_details__c</fullName>
        <label>Contact details</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Education_details__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Education details</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>F_ID_del__c</fullName>
        <displayFormat>ID-{0000}</displayFormat>
        <label>id</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>Languages__c</fullName>
        <label>Languages</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Level__c</fullName>
        <label>Level</label>
        <picklist>
            <picklistValues>
                <fullName>Secondary</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tertiary</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Primary</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <listViews>
        <fullName>AllContacts</fullName>
        <filterScope>Everything</filterScope>
        <label>All Contacts</label>
    </listViews>
    <listViews>
        <fullName>BirthdaysThisMonth</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CONTACT.BIRTHDATE</field>
            <operation>equals</operation>
            <value>THIS_MONTH</value>
        </filters>
        <label>Birthdays This Month</label>
    </listViews>
    <listViews>
        <fullName>MyContacts</fullName>
        <filterScope>Mine</filterScope>
        <label>My Contacts</label>
    </listViews>
    <listViews>
        <fullName>NewLastWeek</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CONTACT.CREATED_DATE</field>
            <operation>equals</operation>
            <value>LAST_WEEK</value>
        </filters>
        <label>New Last Week</label>
    </listViews>
    <listViews>
        <fullName>NewThisWeek</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CONTACT.CREATED_DATE</field>
            <operation>equals</operation>
            <value>THIS_WEEK</value>
        </filters>
        <label>New This Week</label>
    </listViews>
    <recordTypes>
        <fullName>Experiance</fullName>
        <active>true</active>
        <label>Experiance</label>
    </recordTypes>
    <recordTypes>
        <fullName>fresher</fullName>
        <active>true</active>
        <description>It shows freshers detail</description>
        <label>fresher</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>